2000-07-01  Lauris Kaplinski  <lauris@helixcode.com>

	* src/file.c (sp_do_file_print_preview): Don't use FRGBA, as
	  print preview can handle alpha itself

	* src/sp-object-group.h
	* src/object-group.c: Added SPObjectGroup to handle groups of
	  invisible objects (such as NamedViews)

	* src/sp-namedview.h:
	* src/sp-namedview.c: Extends SPObjectGroup

	* src/xml/sp-repr.c (sp-repr-destroy): fix hash table destroy

2000-06-21  Chema Celorio  <chema@celorio.com>

	* src/file.c (sp_do_file_print_preview): added print preview
	stuff. new function
	(sp_print_preview_destroy_cb): new function
	(sp_file_print_preview): new function
	modified the menu to include a print preview item

2000-06-21  Lauris Kaplinski  <lauris@helixcode.com>

	* src/selection.c (sp_selection_update_statusbar): Added original
	  idea of printing sp_image_description (), if single item is
	  selected

	* glade/*.xpm: Jeff's icons. I need to find a way to use png
	  variants, xpm sucks

2000-06-21  Chema Celorio  <chema@celorio.com>

	* src/desktop.c (sp_desktop_set_status): it was #if'ed out,
	reenabel it.

	* src/selection.c (SP_SELECTION_C): added debug messages and macro
	If lauris does not like them I will take them away.
	(sp_selection_update_statusbar): new function

	* src/mdi.c (sp_mdi_app_created): add statusbar to main window.

2000-06-11  Benedikt Roth  <Benedikt.Roth@gmx.net>

	* configure.in: Added de to ALL_LINGUAS.
	* sodipodi.desktop: Added German translations

2000-06-05  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/export.c (sp_export_do_export): use pixbuf context,
	instead of rbuf

2000-06-05  Michael Meeks  <michael@helixcode.com>

	* src/dialogs/export.c (sp_export_do_export): s/rbuf_rgba_new/rbuf_new/

	* src/bonobo/embeddable-document.c: kill a load of redundant prototypes,
	and re-order to suit. (sp_embeddable_document_ps_save),
	(sp_embeddable_document_ps_load): fix for new stream API.
	(sp_embeddable_document_factory): update stream constructor.
